# Rename

./: README.md  app.py  pyproject.toml  requirements.txt  run_colab.ipynb
examples/: sample_mapping_template.xlsx  sample_rules.json
notebooks/: colab_launcher.ipynb
tests/: conftest.py  test_filename_utils.py  test_history.py  test_rule_dictionary.py  test_validation.py
universal_rename_tool/: __init__.py  ai_client.py  ai_features.py  app_core.py  config.py  excel_template.py  executor.py  file_inventory.py  history.py  rename_state.py  reports.py  rule_dictionary.py  ui_colab.py  ui_local.py  utils.py  validation.py  zip_utils.py
